[Feat] #31 시리즈 리팩토링 (#36)
* refactor: 시리즈 레이어간 의존성 개선 및 구조와 명칭 변경

* fix: 타 도메인 import 에러 수정

* fix: 코드리뷰 반영